# cfd-demo

./: Cargo.toml  README.md  Trunk.toml  index-js.html  index.html
assets/: _headers
src/: app.rs  lib.rs  main.rs  model.rs  quad_mesh.rs  utils.rs  views.rs
src/quad_mesh/: aabb.rs  mesh.rs  polygon.rs  quad.rs  quad_tree.rs
src/utils/: drawing.rs  intersection.rs  mesh_rasterizer.rs  polygon_rasterizer.rs  quad_tree_rasterizer.rs
src/views/: mesh_view.rs
