[package]
name = "cfd-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31.0"
egui = "0.31.0"
log = "0.4.25"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"
wasm_thread = "0.3.3"

[profile.release]
debug = true

[target.wasm32-unknown-unknown]
rustflags = ["-C", "target-feature=+atomics,+bulk-memory,+mutable-globals"]

[unstable]
build-std = ["std,panic_abort"]